# cmip6_lib

./: .gitignore  Readme.md  environment.yml  pyproject.toml  setup.cfg  write_version.py
notebooks/: get_domain.md  save-data.md  save-data_al.md
src/cmip6_utils/: fetchvars.py
