[metadata]
name = cmip6_utils
author = OCESE
author_email = phaustin@eoas.ub.ca
description = "cmip6 helpers"
url = https://github.com/phaustin/a301_2020
project_urls =
    Bug Tracker = https://github.com/phaustin/gradelib/issues
keywords='eoas ubc ocese',
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
zip_safe = False
packages = find:
platforms = any
install_requires =
    setuptools_scm
include_package_data = True
python_requires = >=3.8
setup_requires =
    setuptools_scm
package_dir =
   = src

[options.packages.find]
where = src

[bdist_wheel]
universal = 1


